--- a/index.html
+++ b/index.html
@@ -136,7 +136,14 @@ Cross-Origin-Embedder-Policy: require-corp
 			<div id="status-notice" class="godot" style="display: none;"></div>
 		</div>
 
-		<script src="index.js"></script>
+		<script>
+if (!window.SharedArrayBuffer) {
+	document.getElementById('status').style.display = 'none';
+	setTimeout(() => document.getElementById('status').style.display = '', 1500);
+}
+</script>
+<script src="coi-serviceworker.min.js"></script>
+<script src="index.js"></script>
 		<script>
 const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":47648,"index.wasm":49282035},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
